--- a/used-car-api/package.json
+++ b/used-car-api/package.json
@@ -27,6 +27,8 @@
     "@nestjs/platform-fastify": "^8.1.2",
     "@nestjs/typeorm": "^8.0.2",
     "better-sqlite3": "^7.4.4",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
